@@ -1,10 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-_Name=Invest Chart
-_Comment=Display yahoo charts
-Exec=invest-chart
-Terminal=false
-Type=Application
-Icon=invest-big.png
-StartupNotify=true
-Categories=Office;Spreadsheet;
