@@ -1,3 +1,10 @@
+2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>
+
+	* data/Makefile.am:
+	* data/invest-chart.desktop.in:
+	Remove installation of the desktop file. We're an applet after all.
+	Fixes #372706.
+
 2006-11-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* invest/applet.py: Fix a typo in a comment.
